--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -7,3 +7,15 @@
   margin: 0;
   padding: 20px 20px 10px;
 }
+
+
+.Modal-title {
+  height: 80px;
+  background: #f5f5f5;
+  border-radius: 10px 10px 0 0 ;
+}
+
+.Modal-title h1 {
+  margin: 0;
+  padding: 20px 20px 10px;
+}
