--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -23,3 +23,17 @@
   justify-content: flex-end;
   padding: 20px 20px 20px 10px;
 }
+
+.Item-price {
+  display: flex;;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+}
+.Item-num {
+  display: flex;;
+  justify-content: flex-end;
+  align-items: center;
+  margin-left: -100px;
+  width: 100%;
+}
