--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -33,7 +33,7 @@
 .modal-content {
     position: relative;
     width: 100%;
-    max-width: 600px;
+    max-width: 950px;
     border-radius: 10px;
     background-color: #ffffff;
     /* padding: 10px 20px 20px 20px; */
@@ -55,4 +55,8 @@
     display: flex;
     justify-content: end;
     padding-right: 100px;
+}
+.skip {
+    height: 63px;
+    border-bottom: 1px dashed #ccc;
 }
